--- a/src/aj.html
+++ b/src/aj.html
@@ -98,7 +98,7 @@
         10. Závěr a shrnutí:
       </li>
       <li class="list-group-item">
-        studenti by měli být schopni stručně shrnout hlavní body svého textu a uzavřít jej tak, aby zanechali pozitivní dojem.
+        Studenti by měli být schopni stručně shrnout hlavní body svého textu a uzavřít jej tak, aby zanechali pozitivní dojem.
       </li>
     </ul>  
   </div>
